--- a/out.html
+++ b/out.html
@@ -55,7 +55,7 @@
 			<div id="nav">
 				<select id="files">
 				
-				<option value="file0">tudai21/services/string.go (87.5%)</option>
+				<option value="file0">tudai21/services/string.go (85.7%)</option>
 				
 				</select>
 			</div>
@@ -76,27 +76,32 @@ import (
         "strconv"
 )
 
-type FormatString interface {
-        ParseString(c string) (*Result, error)
-}
-
-type Result struct {
+type StringFormat struct {
         Type   string
         Value  string
         Length int
 }
 
-func (r *Result) ParseString(c string) (*Result, error) <span class="cov8" title="1">{
+func (r *StringFormat) ParseString(c string) (*StringFormat, error) <span class="cov8" title="1">{
         if len(c) &gt; 4 </span><span class="cov8" title="1">{
                 r.Type = c[0:2]
                 r.Length, _ = strconv.Atoi(c[2:4])
                 r.Value = c[4:]
-                if r.Length == len(r.Value) </span><span class="cov8" title="1">{
+                if r.Type != "NN" &amp;&amp; r.Type != "TX" </span><span class="cov0" title="0">{
+                        return &amp;StringFormat{"", "", 0}, errors.New("el formato indicado es invalido")
+                }</span>
+                <span class="cov8" title="1">if r.Type == "NN" </span><span class="cov8" title="1">{
+                        _, err := strconv.Atoi(r.Value)
+                        if err != nil </span><span class="cov8" title="1">{
+                                return &amp;StringFormat{"", "", 0}, errors.New("el valor no coincide con el tipo indicado")
+                        }</span>
+                }
+                <span class="cov8" title="1">if r.Length == len(r.Value) </span><span class="cov8" title="1">{
                         return r, nil
                 }</span>
-                <span class="cov8" title="1">return nil, errors.New("La longitud indicada no coincide con la de la cadena")</span>
+                <span class="cov8" title="1">return &amp;StringFormat{"", "", 0}, errors.New("la longitud indicada es incorrecta")</span>
         }
-        <span class="cov0" title="0">return nil, errors.New("Formato de cadena invalido")</span>
+        <span class="cov0" title="0">return &amp;StringFormat{"", "", 0}, errors.New("formato de cadena invalido")</span>
 }
 </pre>
 		
